updated books to reference authors
